<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fragment_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16dp"
        android:drawableLeft="@drawable/ic_bill_payment_icon"
        android:drawablePadding="@dimen/margin_16dp"
        android:gravity="center_vertical"
        android:text="Bill Payments"
        android:textColor="@color/black_text_color"
        android:textSize="22sp"
        android:textStyle="normal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView

        android:id="@+id/all_tv"
        style="@style/billpaymentroundedtextviewstyle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/billpayments_options_background"
        android:paddingLeft="10dp"

        android:paddingRight="10dp"
        android:text="@string/all"
        app:layout_constraintEnd_toStartOf="@+id/tv_electricity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_title" />

    <TextView
        android:id="@+id/tv_frequent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:paddingRight="10dp"
        android:text="@string/frequent"
        android:textColor="@color/app_orange"
        app:layout_constraintEnd_toStartOf="@+id/tv_electricity"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/all_tv" />

    <TextView
        android:id="@+id/tv_electricity"
        style="@style/billpaymentroundedtextviewstyle"
        android:layout_width="wrap_content"
        android:background="@drawable/billpayments_options_background"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:text="@string/electricity"
        app:layout_constraintEnd_toStartOf="@+id/tv_water"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/all_tv"
        app:layout_constraintTop_toTopOf="@+id/all_tv" />

    <TextView
        android:id="@+id/tv_water"
        style="@style/billpaymentroundedtextviewstyle"
        android:layout_width="wrap_content"
        android:background="@drawable/billpayments_options_background"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:text="@string/water"


        app:layout_constraintEnd_toStartOf="@+id/tv_airtime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_electricity"
        app:layout_constraintTop_toTopOf="@+id/tv_electricity" />

    <TextView
        android:id="@+id/tv_airtime"

        style="@style/billpaymentroundedtextviewstyle"
        android:layout_width="wrap_content"
        android:background="@drawable/billpayments_options_background"
        android:paddingLeft="13dp"
        android:paddingRight="13dp"
        android:text="@string/airtime"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tv_water"
        app:layout_constraintTop_toTopOf="@+id/tv_water" />

    <!-- <TextView
         android:id="@+id/tv_governmtnservices"
         style="@style/billpaymentroundedtextviewstyle"
         android:layout_width="wrap_content"
         android:layout_marginEnd="16dp"
         android:background="@drawable/billpayments_options_background"
         android:paddingLeft="13dp"
         android:paddingRight="13dp"
         android:text="Government Services"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/tv_airtime"
         app:layout_constraintTop_toTopOf="@+id/tv_airtime" />-->
    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_frequent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bill_frequentoptionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_AllBiller"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:paddingRight="10dp"
                android:text="@string/allbillers"
                android:textColor="@color/app_orange"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/bill_frequentoptionsRecyclerView" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/bill_optionsRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintTop_toBottomOf="@id/tv_AllBiller" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>